github link update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#contact">Contact</a></li>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/ugo-moissaing-347452213/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Nakmwy" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                     <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
@@ -112,7 +112,7 @@
                     <p><i class="fas fa-phone"></i>+33 7 60 51 11 72</p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/ugo-moissaing-347452213/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Nakmwy" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                     <a href="files/Resume.pdf" target="_blank" download="Ugo_Moissaing-Resume" class="btn-filled">Download resume</a>
                 </div>
