--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>I am a 5th-year student at EPITA, a french school of computer science, graduating this year. Through my cursus I learned to use various programming languages, such as C, C++, C#, Java, Javascript and Python, and technologies, such as Git, Object-Oriented-Programming and RestAPI. My major is about IT managment and Consulting. In this way, I also had courses about Managment, Consulting, CRM, etc.<br>If you want to know more about my skills, education or professional experience feel free to contact me or to download my resume.</p>
                     <a href="files/Resume.pdf" target="_blank" download="Ugo_Moissaing-Resume" class="btn-filled">Download resume</a>
                 </div>
             </div>
